test/valid/test3.sl
string s;
s := concatenate("Hello", concatenate(" ", "World!"));
print(s);