test/invalid/test11.sl
string s;
s := concatenate(5, "test");